project/stage/tests/reject/bad_statements/bad_if_else/before_var_decl.ul
void main () {
    if (true) {} else {}
    boolean wOOP_1123;
}
